--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-thunk": "^1.0.0",
-    "redox": "^0.1.1",
+    "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9"
   },
   "devDependencies": {
