--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-syntax-highlighter": "^15.5.0",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2"
